--- a/src/templates/partials/_projects.html
+++ b/src/templates/partials/_projects.html
@@ -1,8 +1,8 @@
 <section class="projects">
     <div class="container" data-aos="fade-up">
         <div class="text-center">
-            <h2 class="projects__name section-name section-name--mw446 section-name--arrow-r">OUR BUSINESS RELATED
-                PROJECTS</h2>
+            <h2 class="projects__name section-name section-name--mw446 section-name--arrow-r">OUR BUSINESS RELATED projects
+            </h2>
         </div>
         <div class="projects__block">
             <a href="#" class="projects__link ">
