--- a/src/templates/partials/_hire_us.html
+++ b/src/templates/partials/_hire_us.html
@@ -1,14 +1,13 @@
-<section class="hire_us">
+<section class="hire">
     <div class="container" data-aos="fade-up">
-        <div class="hire">
-            <div class="hire__wrap">
-
-                <img class="hire__img b-lazy" src="./img/png/hire_clean_small.jpg" data-src="./img/png/hire_clean.png" alt="hand work">
-                <div class="hire__img--overlay"></div>
+        <div class="hire-us">
+            <div class="hire-us__wrap">
+                <img class="hire-us__img b-lazy" src="./img/png/hire_clean_small.jpg" data-src="./img/png/hire_clean.png" alt="hand work">
+                <div class="hire-us__img--overlay"></div>
             </div>
-            <div class="hire__content">
-                <h3 class="hire__h3">NEED CREATIVE WORKERS?</h3>
-                <button class="hire__button button" id="one" type="button"><b>HIRE US</b></button>
+            <div class="hire-us__content">
+                <h3 class="hire-us__h3">NEED CREATIVE WORKERS?</h3>
+                <button class="hire-us__button button" id="one" type="button"><b>HIRE US</b></button>
             </div>
         </div>
     </div>
