--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -1,8 +1,7 @@
 <footer class="footer" data-aos="fade-up">
     <div class="container container--footer">
-
         <nav class="footer__menu">
-            <div class="footer__list">
+            <div class="menu">
                 <h3 class="menu__h3">PORTFOLIO</h3>
                 <ul>
                     <li class="menu__item"><a class="menu__link" href="#">Web Design</a></li>
@@ -12,7 +11,7 @@
                     <li class="menu__item"><a class="menu__link" href="#">User Interfase</a></li>
                 </ul>
             </div>
-            <div class="footer__list">
+            <div class="menu">
                 <h3 class="menu__h3">ABOUT</h3>
                 <ul>
                     <li class="menu__item"><a class="menu__link" href="#">The Company</a></li>
@@ -20,7 +19,7 @@
                     <li class="menu__item"><a class="menu__link" href="#">Vision</a></li>
                 </ul>
             </div>
-            <div class="footer__list">
+            <div class="menu">
                 <h3 class="menu__h3">GALLERY</h3>
                 <ul>
                     <li class="menu__item"><a class="menu__link" href="#">Flickr</a></li>
@@ -29,7 +28,7 @@
                     <li class="menu__item"><a class="menu__link" href="#">PhotoDune</a></li>
                 </ul>
             </div>
-            <div class="footer__list">
+            <div class="menu">
                 <h3 class="menu__h3">CONTACT</h3>
                 <ul>
                     <li class="menu__item"><a class="menu__link" href="#">Basic Info</a></li>
