--- a/css/main.css
+++ b/css/main.css
@@ -1079,20 +1079,6 @@ body {
   .packages__table::after {
     right: 33%; }
 
-.packages__coll {
-  width: 33%;
-  padding-bottom: 50px; }
-  .packages__coll:hover .coll__span {
-    transform: scale(1.1);
-    transform-origin: bottom;
-    color: #363636; }
-  .packages__coll:hover .coll__btn, .packages__coll:hover .coll__name {
-    transform: scale(1.1);
-    transform-origin: bottom; }
-  .packages__coll:hover .coll__price--dol {
-    transform: scale(2);
-    transform-origin: right; }
-
 .packages--grey {
   color: #a5a5a5; }
 
@@ -1102,70 +1088,58 @@ body {
 .packages--yellow {
   color: #ffc038; }
 
-.coll__span {
-  display: block;
-  transition: transform 0.25s ease-in 0.25s;
-  font-weight: 500; }
-
-.coll__li {
-  display: block;
-  border-bottom: 1px solid #efb415;
-  padding: 14px 0; }
-
-.coll__price--dol {
-  display: inline-block;
-  font-size: 35px;
-  padding: 55px 0 48px 0;
-  transition: all 0.75s ease-in; }
-
-.coll__name {
-  font-size: 22px;
-  font-weight: 400;
-  padding-bottom: 28px;
-  display: block;
-  transition: transform 0.25s ease-in; }
-  .coll__name--mobile {
-    display: none; }
-
-.coll__btn {
-  border-radius: 3px;
-  box-shadow: 1px 2px 0px 0px rgba(0, 0, 0, 0.1);
-  width: 192px;
-  height: 45px;
-  appearance: none;
-  color: white;
-  border: 0;
-  white-space: nowrap;
-  user-select: none;
-  text-decoration: none;
-  transition: transform 0.75s linear 0.5s; }
-  .coll__btn--grey {
-    background-color: #a5a5a5; }
-  .coll__btn--red {
-    background-color: #f26c4f; }
-  .coll__btn--yellow {
-    background-color: #ffc038; }
-  .coll__btn:hover {
-    animation: shake 1.5s cubic-bezier(0.36, 0.07, 0.19, 0.97) infinite;
-    transform: translate3d(0, 0, 0);
-    backface-visibility: hidden;
-    perspective: 1000px;
-    cursor: pointer; }
-
-@keyframes shake {
-  10%,
-  90% {
-    transform: translate3d(-1px, 0, 0); }
-  20%,
-  80% {
-    transform: translate3d(2px, 0, 0); }
-  30%,
-  50%,
-  70% {
-    transform: translate3d(-4px, 0, 0); }
-  40%,
-  60% {
-    transform: translate3d(4px, 0, 0); } }
+.coll {
+  width: 33%;
+  padding-bottom: 50px; }
+  .coll:hover .coll__span {
+    transform: scale(1.1);
+    transform-origin: bottom;
+    color: #363636; }
+  .coll:hover .coll__btn, .coll:hover .coll__name {
+    transform: scale(1.1);
+    transform-origin: bottom; }
+  .coll:hover .coll__price--dol {
+    transform: scale(1.6);
+    transform-origin: right; }
+  .coll__span {
+    display: block;
+    transition: transform 0.25s ease-in 0.25s;
+    font-weight: 500; }
+  .coll__li {
+    display: block;
+    border-bottom: 1px solid #efb415;
+    padding: 14px 0; }
+  .coll__price--dol {
+    display: inline-block;
+    font-size: 35px;
+    padding: 55px 0 48px 0;
+    transition: all 0.75s ease-in; }
+  .coll__name {
+    font-size: 22px;
+    font-weight: 400;
+    padding-bottom: 28px;
+    display: block;
+    transition: transform 0.25s ease-in; }
+    .coll__name--mobile {
+      display: none; }
+  .coll__btn {
+    border-radius: 3px;
+    box-shadow: 1px 2px 0px 0px rgba(0, 0, 0, 0.1);
+    width: 192px;
+    height: 45px;
+    appearance: none;
+    color: white;
+    border: 0;
+    white-space: nowrap;
+    user-select: none;
+    text-decoration: none;
+    transition: all 0.75s linear 0.5s; }
+    .coll__btn--grey {
+      background-color: #a5a5a5; }
+    .coll__btn--red {
+      background-color: #f26c4f; }
+    .coll__btn--yellow {
+      background-color: #ffc038; }
 
 .packages__table::before, .packages__table::after {
   content: " ";
@@ -1181,15 +1155,15 @@ body {
     width: 70%; }
   .coll__price {
     padding: 15px; }
-  .packages__table {
-    width: 100%; }
-  .packages__coll:hover .coll__price {
+  .coll:hover .coll__price {
     padding: 15px 0; }
-    .packages__coll:hover .coll__price--dol {
-      transform: scale(1.5); } }
+    .coll:hover .coll__price--dol {
+      transform: scale(1.3); }
+  .coll .packages__table {
+    width: 100%; } }
 
 @media screen and (max-width: 568px) {
-  .packages__coll:hover .coll__span {
+  .coll:hover .coll__span {
     transform: scale(0.9); } }
 
 @media screen and (max-width: 480px) {
@@ -1197,27 +1171,27 @@ body {
     flex-wrap: wrap; }
     .packages__table::before, .packages__table::after {
       width: 0px; }
-  .packages__coll {
+  .coll {
     width: 80%;
     padding: 0;
     margin: 10px auto; }
-  .coll__name {
-    display: none; }
-    .coll__name--mobile {
-      display: block;
-      color: white;
-      padding-bottom: 15px;
-      padding-top: 15px;
-      opacity: 0.9;
-      border-radius: 3px; }
-  .coll__span {
-    transform: scale(1.1);
-    transform-origin: bottom;
-    color: #363636; }
-  .coll__price--dol {
-    transform: scale(1.3);
-    transform-origin: right;
-    padding: 10px 0; } }
+    .coll__name {
+      display: none; }
+      .coll__name--mobile {
+        display: block;
+        color: white;
+        padding-bottom: 15px;
+        padding-top: 15px;
+        opacity: 0.9;
+        border-radius: 3px; }
+    .coll__span {
+      transform: scale(1.1);
+      transform-origin: bottom;
+      color: #363636; }
+    .coll__price--dol {
+      transform: scale(1.2);
+      transform-origin: right;
+      padding: 10px 0; } }
 
 .history {
   width: 100%;
@@ -1412,22 +1386,22 @@ body {
   text-align: left;
   padding: 0 5px 15px 5px; }
 
-.hire {
+.hire-us {
   margin: 130px 0; }
-  .hire__content {
+  .hire-us__content {
     background-color: #ffc038;
     color: white;
     padding: 3%;
     font-family: "Open Sans", sans-serif;
     transform: translateY(-50%);
     width: 100%; }
-  .hire__h3 {
+  .hire-us__h3 {
     font-size: 22px; }
-  .hire__wrap {
+  .hire-us__wrap {
     position: relative; }
-  .hire__img {
+  .hire-us__img {
     width: 100%; }
-    .hire__img--overlay {
+    .hire-us__img--overlay {
       transition: all 1s ease-in-out;
       background-color: #ffc03880;
       position: absolute;
@@ -1435,7 +1409,7 @@ body {
       left: 0;
       width: 100%;
       height: 100%; }
-  .hire__button {
+  .hire-us__button {
     float: right;
     color: #3a3a3a;
     border: none;
@@ -1448,7 +1422,7 @@ body {
     font-size: 20px;
     transition: all 500ms ease;
     transform-style: preserve-3d; }
-    .hire__button:after {
+    .hire-us__button:after {
       text-align: center;
       left: 0;
       width: 100%;
@@ -1461,73 +1435,72 @@ body {
       content: 'Click to hire';
       transform-origin: left bottom;
       transform: rotateX(90deg) translateY(-80%); }
-    .hire__button:hover {
+    .hire-us__button:hover {
       background-color: #464646;
       color: white; }
-    .hire__button:focus {
+    .hire-us__button:focus {
       outline: none; }
-  .hire:hover .hire__img--overlay {
+  .hire-us:hover .hire-us__img--overlay {
     background: unset; }
 
 @media only screen and (max-width: 600px) {
-  .hire__button,
-  .hire__h3 {
+  .hire-us__button,
+  .hire-us__h3 {
     font-size: 18px; } }
 
 @media only screen and (max-width: 470px) {
-  .hire {
+  .hire-us {
     margin: 65px -20px; }
-    .hire__content {
+    .hire-us__content {
       padding-left: 20px;
       padding-right: 20px; }
-    .hire__img {
+    .hire-us__img {
       width: 120%; }
-    .hire__wrap {
+    .hire-us__wrap {
       overflow: hidden; } }
 
 @media (max-width: 400px) {
-  .hire__h3 {
+  .hire-us__h3 {
     max-width: calc(100vw - 140px); }
-  .hire__button {
+  .hire-us__button {
     transform: translateY(-120%); } }
+
+.container--footer {
+  width: 100%;
+  color: #aab2bd; }
 
 .footer {
   width: 100vw;
   background-color: #363636; }
-  .footer-inner {
-    width: 100%;
-    color: #aab2bd; }
-    .footer-inner__list {
-      list-style: none;
-      margin-right: 20px; }
-    .footer-inner__menu {
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      margin-right: -20px; }
-    .footer-inner__social {
-      text-align: center;
-      padding-bottom: 33px; }
+  .footer__menu {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-right: -20px; }
+  .footer__social {
+    text-align: center;
+    padding-bottom: 33px; }
 
-.menu__h3 {
-  font-size: 18px;
-  font-weight: 500;
-  color: #e6e9ed;
-  padding-bottom: 28px; }
-
-.menu__link {
-  text-decoration: none;
-  color: #aab2bd;
-  line-height: 2;
-  transition: all .15s ease; }
-  .menu__link:hover {
-    color: white; }
-
-.menu__item {
-  transition: all 0.15s ease; }
-  .menu__item:hover {
-    transform: scale(1.01);
-    transform-origin: left; }
+.menu {
+  list-style: none;
+  margin-right: 20px; }
+  .menu__h3 {
+    font-size: 18px;
+    font-weight: 500;
+    color: #e6e9ed;
+    padding-bottom: 28px; }
+  .menu__link {
+    text-decoration: none;
+    color: #aab2bd;
+    line-height: 2;
+    transition: all .15s ease; }
+    .menu__link:hover {
+      color: white; }
+  .menu__item {
+    transition: all 0.15s ease; }
+    .menu__item:hover {
+      transform: scale(1.01);
+      transform-origin: left; }
 
 .social {
   margin: 40px auto 20px auto; }
@@ -1551,7 +1524,7 @@ body {
     transform: translate(-50%, -50%); }
 
 @media (max-width: 1044px) {
-  .footer-inner__list {
+  .menu {
     padding-top: 45px; } }
 
 @media (max-width: 568px) {
@@ -1559,12 +1532,12 @@ body {
     padding: 10px 0; } }
 
 @media (max-width: 520px) {
-  .footer-inner__list {
+  .menu {
     width: calc(50vw - 40px); } }
 
 @media (max-width: 479px) {
-  .footer-inner__list {
+  .menu {
     padding-top: 20px; }
-  .footer-inner__menu {
+  .footer__menu {
     padding: 10px;
     max-width: 100vw; } }
