fix #1-3 comments from Yura

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -91,7 +91,7 @@
 }
 
 @media only screen and (min-width: 901px) {
-    .nav__link--decorated:hover {
+    .nav__link:hover {
         color: $color-white;
     }
 }
