--- a/src/scss/_container.scss
+++ b/src/scss/_container.scss
@@ -4,9 +4,9 @@
     max-width: 1004px;
     margin: 0 auto;
     // padding-top: 130px;
-    &--no-padding {
-        padding: 0;
-    }
+    // &--no-padding {
+    //     padding: 0;
+    // }
     &--footer {
         padding-top: 47px;
     }
