atomic class for uppercase

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -10,7 +10,7 @@
     font-family: $h2-font-family;
     text-align: center;
     white-space: nowrap;
-    text-transform: uppercase;
+    // text-transform: uppercase;
     padding: 13px 14px;
     margin-top: 130px;
     margin-bottom: 145px;
@@ -75,7 +75,7 @@
 }
 
 .yellow-btn {
-    text-transform: uppercase;
+    // text-transform: uppercase;
     background-color: $color-mainYellow;
     // appearance: none;
     border: 0;
