--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -58,7 +58,7 @@
     &__link {
         color: $color-mainGrey;
         text-decoration: none;
-        text-transform: uppercase;
+        // text-transform: uppercase;
         &--centered {
             font-size: 12px;
             font-weight: 900;
