--- a/src/scss/_services.scss
+++ b/src/scss/_services.scss
@@ -32,7 +32,7 @@
         font-size: $h3-font-size;
         line-height: 1;
         color: $h3-font-color;
-        text-transform: uppercase;
+        // text-transform: uppercase;
     }
     &__text {
         font-weight: $p-font-weight; // font-size: $p-font-size;
