--- a/src/templates/partials/_history.html
+++ b/src/templates/partials/_history.html
@@ -8,7 +8,7 @@
         </div>
 
         <div class="history__right">
-            <h2 class="history__title--no-space section-name section-name--mw220">OUR HISTORY</h2>
+            <h2 class="history__title--no-space section-name uppercase section-name--mw220">OUR HISTORY</h2>
             <p class="history__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae lacus justo. Ut ullamcorper
                 fermentum ex. Nullam mollis diam id orci volutpat malesuada. Duis quis interdum justo, ac ultricies
@@ -23,7 +23,7 @@
                 lacus augue, volutpat quis porttitor a, placerat in lacus.
             </p>
 
-            <button type="button" class="history__button yellow-btn">browse our story</button>
+            <button type="button" class="history__button yellow-btn uppercase">browse our story</button>
         </div>
 
     </div>
