--- a/src/templates/partials/_packages.html
+++ b/src/templates/partials/_packages.html
@@ -1,11 +1,11 @@
 <section class="packages">
     <div class="container" data-aos="fade-up">
         <div class="text-center">
-            <h2 class="section-name section-name--mw330  section-name--arrow-l">our packages</h2>
+            <h2 class="section-name uppercase section-name--mw330  section-name--arrow-l">our packages</h2>
         </div>
         <div class="packages__table">
             <div class="coll">
-                <h3 class="coll__name--mobile coll__btn--grey">BASIC</h3>
+                <h3 class="coll__name--mobile coll__btn--grey uppercase">Basic</h3>
                 <div>
                     <h4 class="coll__name packages--grey">Basic</h4>
                     <ul>
@@ -15,11 +15,11 @@
                         <li class="coll__li"><span class="coll__span">10 Gb storage</span></li>
                         <li class="coll__price packages--grey"><b class="coll__price--dol">$5</b>/mo.</li>
                     </ul>
-                    <button class="coll__btn coll__btn--grey" type="button">ORDER NOW</button>
+                    <button class="coll__btn coll__btn--grey uppercase" type="button">order now</button>
                 </div>
             </div>
             <div class="coll">
-                <h3 class="coll__name--mobile coll__btn--red">STANDART</h3>
+                <h3 class="coll__name--mobile coll__btn--red uppercase">Standart</h3>
                 <div>
                     <h4 class="coll__name packages--red">Standart</h4>
                     <ul>
@@ -30,11 +30,11 @@
                         <li class="coll__price packages--red">
                             <b class="coll__price--dol">$12</b>/mo.</li>
                     </ul>
-                    <button class="coll__btn coll__btn--red" type="button">ORDER NOW</button>
+                    <button class="coll__btn coll__btn--red uppercase" type="button">order now</button>
                 </div>
             </div>
             <div class="coll">
-                <h3 class="coll__name--mobile coll__btn--yellow">PREMIUM</h3>
+                <h3 class="coll__name--mobile coll__btn--yellow uppercase">Premium</h3>
                 <div>
                     <h4 class="coll__name packages--yellow">Premium</h4>
                     <ul>
@@ -45,7 +45,7 @@
                         <li class="coll__price packages--yellow">
                             <b class="coll__price--dol">$19</b>/mo.</li>
                     </ul>
-                    <button class="coll__btn coll__btn--yellow" type="button">ORDER NOW</button>
+                    <button class="coll__btn coll__btn--yellow uppercase" type="button">order now</button>
                 </div>
             </div>
         </div>
