--- a/src/templates/partials/_projects.html
+++ b/src/templates/partials/_projects.html
@@ -1,7 +1,7 @@
 <section class="projects">
     <div class="container" data-aos="fade-up">
         <div class="text-center">
-            <h2 class="projects__name section-name section-name--mw446 section-name--arrow-r">OUR BUSINESS RELATED projects
+            <h2 class="projects__name section-name uppercase section-name--mw446 section-name--arrow-r">OUR BUSINESS RELATED projects
             </h2>
         </div>
         <div class="projects__block">
