--- a/src/templates/partials/_services.html
+++ b/src/templates/partials/_services.html
@@ -2,13 +2,13 @@
     <div class="container" data-aos="fade-up">
         <div class="text-center">
 
-            <h2 class="section-name section-name--mw330 section-name--arrow-r">what we do</h2>
+            <h2 class="section-name uppercase section-name--mw330 section-name--arrow-r">what we do</h2>
         </div>
         <div class="services__container">
             <div class="services__block">
                 <img class="services__image services__size b-lazy" data-src="img/png/macbook_1.png" src="img/png/macbook_1_small.gif" alt="macbook">
                 <article class="services__content">
-                    <h3 class="services__header">web design</h3>
+                    <h3 class="services__header uppercase">web design</h3>
                     <p class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                         tempor incididunt ut labore et dolore magna aliqua. Suscipit tellus mauris a diam maecenas sed
                         enim ut sem. Proin sagittis nisl rhoncus mattis rhoncus urna neque viverra.
@@ -16,13 +16,13 @@
                         imperdiet sed euismod nisi porta lorem. Est placerat in egestas erat imperdiet sed euismod
                         nisi.
                     </p>
-                    <button type="button" class="yellow-btn services__btn open-button">view more </button>
+                    <button type="button" class="yellow-btn uppercase services__btn open-button">view more </button>
                 </article>
             </div>
             <div class="services__block">
                 <img class="services__image services__size b-lazy" data-src="img/png/macbook_1.png" src="img/png/macbook_1_small.gif" alt="macbook">
                 <article class="services__content">
-                    <h3 class="services__header">search engine optimization</h3>
+                    <h3 class="services__header uppercase">search engine optimization</h3>
                     <p class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                         tempor incididunt ut labore et dolore magna aliqua. Suscipit tellus mauris a diam maecenas sed
                         enim ut sem. Proin sagittis nisl rhoncus mattis rhoncus urna neque viverra.
@@ -30,14 +30,14 @@
                         imperdiet sed euismod nisi porta lorem. Est placerat in egestas erat imperdiet sed euismod
                         nisi.
                     </p>
-                    <button type="button" class="yellow-btn services__btn open-button">view more </button>
+                    <button type="button" class="yellow-btn uppercase services__btn open-button">view more </button>
                 </article>
 
             </div>
             <div class="services__block">
                 <img class="services__image services__size b-lazy" data-src="img/png/macbook_1.png" src="img/png/macbook_1_small.gif" alt="macbook">
                 <article class="services__content">
-                    <h3 class="services__header">affiliate marketting</h3>
+                    <h3 class="services__header uppercase">affiliate marketting</h3>
                     <p class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                         tempor incididunt ut labore et dolore magna aliqua. Suscipit tellus mauris a diam maecenas sed
                         enim ut sem. Proin sagittis nisl rhoncus mattis rhoncus urna neque viverra.
@@ -45,7 +45,7 @@
                         imperdiet sed euismod nisi porta lorem. Est placerat in egestas erat imperdiet sed euismod
                         nisi.
                     </p>
-                    <button type="button" class="yellow-btn services__btn open-button">view more </button>
+                    <button type="button" class="yellow-btn uppercase services__btn open-button">view more </button>
                 </article>
             </div>
         </div>
