--- a/src/templates/partials/_support.html
+++ b/src/templates/partials/_support.html
@@ -1,7 +1,7 @@
 <section class="support">
     <div class="container" data-aos="fade-up">
         <div class="text-center">
-            <h2 class="support__name section-name section-name--mw446  section-name--arrow-r">updates & support</h2>
+            <h2 class="support__name section-name uppercase section-name--mw446  section-name--arrow-r">updates & support</h2>
         </div>
         <div class="suppport__inner">
             <img class="b-lazy support__img" data-src="img/png/macbook_2.png" src="img/png/macbook_2_small.gif" alt="macbook">
@@ -10,7 +10,7 @@
                     aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <p> Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
             </div>
-            <button class="support_button yellow-btn">SUPPORT CENTER</button>
+            <button class="support_button yellow-btn uppercase">SUPPORT CENTER</button>
         </div>
     </div>
 </section>
