--- a/src/templates/partials/_team.html
+++ b/src/templates/partials/_team.html
@@ -1,6 +1,6 @@
 <section class="team screen-width" data-aos="fade-up">
     <div class="text-center">
-        <h2 class="team__name section-name section-name--mw446  section-name--arrow-l">OUR TEAM MEMBERS</h2>
+        <h2 class="team__name section-name uppercase section-name--mw446  section-name--arrow-l">OUR TEAM MEMBERS</h2>
     </div>
     <div class="screen-width brand-yellow">
         <div class="team__wrapper container">
