--- a/src/templates/partials/_welcome.html
+++ b/src/templates/partials/_welcome.html
@@ -2,7 +2,7 @@
     <div class="container welcome__container container--no-padding">
         <figure class="hero">
             <figcaption class="hero__message">
-                <h1 class="hero__title">
+                <h1 class="hero__title uppercase">
                     <span class="hero__title--nowrap">
                         unique-tech
                     </span>
