--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -10,6 +10,10 @@ body {
     font-family: $body-font-family;
 }
 
+.uppercase {
+    text-transform: uppercase;
+}
+
 @media (any-hover: none) {
     * {
 outline: none;
