--- a/src/scss/_welcome.scss
+++ b/src/scss/_welcome.scss
@@ -44,7 +44,7 @@
     }
     &__title {
         color: $h1-font-color;
-        text-transform: uppercase;
+        // text-transform: uppercase;
         font-size: 42px;
         font-weight: 700;
         line-height: 1.2;
