--- a/src/templates/partials/_features.html
+++ b/src/templates/partials/_features.html
@@ -1,7 +1,7 @@
 <section class="features">
     <div class="container features__container" data-aos="fade-up">
         <div class="text-center">
-            <h2 class="features__heading section-name section-name--mw330  section-name--arrow-r">our features</h2>
+            <h2 class="features__heading section-name uppercase section-name--mw330  section-name--arrow-r">our features</h2>
         </div>
         <div class="features__content">
             <div class="features__section">
