--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -1,6 +1,6 @@
 <header class="header header--bgColor">
     <div class="container header__container">
-        <a href="#" class="logo nav__link">
+        <a href="#" class="logo nav__link uppercase">
             <span class="logo__element logo__element--bordered logo__element--light">UNIQUE</span>
             <span class="logo__element">TECH</span>
         </a>
@@ -11,14 +11,14 @@
 
         <nav class="nav">
             <ul class="nav__block">
-                <li class="nav__element"><a class="nav__link" href="#">home</a></li>
-                <li class="nav__element"><a class="nav__link" href="#">services</a></li>
-                <li class="nav__element"><a class="nav__link" href="#">about</a></li>
-                <li class="nav__element"><a class="nav__link" href="#">portfolio</a></li>
-                <li class="nav__element"><a class="nav__link" href="#">academic</a></li>
-                <li class="nav__element"><a class="nav__link" href="#">blog</a></li>
-                <li class="nav__element"><a class="nav__link" href="#">contact us</a><br/>
-                    <a class="nav__link nav__link--centered" href='tel:#+966322322'>(+966-322 322)</a></li>
+                <li class="nav__element"><a class="nav__link uppercase" href="#">home</a></li>
+                <li class="nav__element"><a class="nav__link uppercase" href="#">services</a></li>
+                <li class="nav__element"><a class="nav__link uppercase" href="#">about</a></li>
+                <li class="nav__element"><a class="nav__link uppercase" href="#">portfolio</a></li>
+                <li class="nav__element"><a class="nav__link uppercase" href="#">academic</a></li>
+                <li class="nav__element"><a class="nav__link uppercase" href="#">blog</a></li>
+                <li class="nav__element"><a class="nav__link uppercase" href="#">contact us</a><br/>
+                    <a class="nav__link uppercase nav__link--centered" href='tel:#+966322322'>(+966-322 322)</a></li>
             </ul>
         </nav>
     </div>
@@ -52,7 +52,7 @@
 
         window.onload = function () {
             document.querySelector('.nav__burger').addEventListener('click', onOff);
-            // document.querySelector('.nav__link').addEventListener('click', hide);
+            // document.querySelector('.nav__link uppercase').addEventListener('click', hide);
         }
     </script>
 </header>
