--- a/src/templates/partials/_process.html
+++ b/src/templates/partials/_process.html
@@ -1,7 +1,7 @@
 <section class="process">
     <div class="container" data-aos="fade-up">
         <div class="text-center">
-            <h2 class="section-name section-name--mw330 section-name--arrow-l">how we work</h2>
+            <h2 class="section-name uppercase section-name--mw330 section-name--arrow-l">how we work</h2>
         </div>
         <div class="process__content">
             <img class="b-lazy" src="./img/svg/big_pic/big_pic_small.gif" data-src="./img/svg/big_pic/big_pic.svg" alt="process scheme">
