--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -13,6 +13,13 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" defer></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js" defer></script>
+        <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" defer></script>
+        <script src="https://unpkg.com/aos@next/dist/aos.js" defer></script>
+        <script src="./scripts/blazy.min.js" defer></script>
+        <script src="./scripts/script.js" defer></script>
+
 
     <title>Unique-tech</title>
 </head>
@@ -23,12 +30,7 @@
 
     <!-- <script src="./scripts/_AOSconfig.js"></script>
             <script src="./scripts/aos.js"></script> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="./scripts/script.js"></script>
-    <script src="./scripts/blazy.min.js"></script>
+
 </body>
 
 </html>
